--- a/index.html
+++ b/index.html
@@ -8,16 +8,117 @@
   <meta name="CocoaVersion" content="2022.6">
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 17.0px Times; color: #000000; -webkit-text-stroke: #e5e75c}
+    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 17.0px Times; color: #000000; -webkit-text-stroke: #e5e75c; min-height: 20.0px}
     span.s1 {font-kerning: none}
   </style>
 </head>
 <body>
 <p class="p1"><span class="s1">&lt;!DOCTYPE html&gt;</span></p>
 <p class="p1"><span class="s1">&lt;html&gt;</span></p>
-<p class="p1"><span class="s1">&lt;body&gt;</span></p>
-<p class="p1"><span class="s1">&lt;h1&gt;Hello World&lt;/h1&gt;</span></p>
-<p class="p1"><span class="s1">&lt;p&gt;I’m hosted with GitHub Pages.&lt;/p&gt;</span></p>
-<p class="p1"><span class="s1">&lt;/body&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;head&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;style&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>body {</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>background: linear-gradient(to right, #C0AD26, #8DCED9, #6EA33C);</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>background-size: 600% 600%;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>animation: backgroundAnimation 30s ease infinite;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>}</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>@keyframes backgroundAnimation {</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>0%{background-position:0% 50%}</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>50%{background-position:100% 50%}</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>100%{background-position:0% 50%}</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>}</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>h1 {</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>text-align: center;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>padding: 20px;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>font-size: 24px;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>}</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>.text-area-container {</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>display: flex;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>flex-direction: row;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>align-items: center;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>justify-content: center;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>margin: 20px;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>}</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>textarea {</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>padding: 12px 20px;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>margin: 8px 0;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>box-sizing: border-box;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>border: 2px solid #ccc;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>border-radius: 4px;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>background-color: #f8f8f8;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>font-size: 16px;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>resize: none;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>width: 50%;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>height: 100px;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>}</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>button {</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>width: 80px;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>height: 40px;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>background-color: #4CAF50;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>color: white;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>padding: 14px 20px;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>margin: 8px 0;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>border: none;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>border-radius: 4px;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>cursor: pointer;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>font-size: 16px;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>}</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>.response-container {</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>background-color: #FFFFFF;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>border-radius: 8px;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>box-shadow: 0px 0px 4px #00000029;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>text-align: left;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>padding: 20px;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>margin: 20px;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>}</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>.response-container p {</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>font-size: 16px;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>margin: 0;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>}</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;/style&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;/head&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;body&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;h1&gt;Rewrite your emails&lt;/h1&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;div class="text-area-container"&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;textarea id="emailText" placeholder="Enter your email text here"&gt;&lt;/textarea&gt;</span></p>
+<p class="p1"><span class="s1">&lt;button id="submitButton"&gt;Enter&lt;/button&gt;</span></p>
+<p class="p1"><span class="s1">&lt;/div&gt;</span></p>
+<p class="p1"><span class="s1">&lt;div class="response-container"&gt;</span></p>
+<p class="p1"><span class="s1">&lt;p id="responseText"&gt;&lt;/p&gt;</span></p>
+<p class="p1"><span class="s1">&lt;/div&gt;</span></p>
+<p class="p1"><span class="s1">&lt;script&gt;</span></p>
+<p class="p1"><span class="s1">const endpoint = "https://api.openai.com/v1/engines/text-davinci-003/completions";</span></p>
+<p class="p1"><span class="s1">const apiKey = "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";</span></p>
+<p class="p2"><span class="s1"></span><br></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>const emailText = document.getElementById("emailText");</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>const submitButton = document.getElementById("submitButton");</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>const responseText = document.getElementById("responseText");</span></p>
+<p class="p2"><span class="s1"></span><br></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>submitButton.addEventListener("click", async () =&gt; {</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>const prompt = emailText.value;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>if (!prompt) {</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>alert("Please enter an email text to rewrite");</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>return;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>}</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>const options = {</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>method: "POST",</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>headers: {</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>"Content-Type": "application/json",</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>"Authorization": `Bearer ${apiKey}`</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>},</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>body: JSON.stringify({</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>prompt: [prompt],</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>max_tokens: 500,</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>temperature: 0.5</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>})</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>};</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>const response = await fetch(endpoint, options);</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>const json = await response.json();</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>responseText.innerHTML = json.choices[0].text;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>});</span></p>
+<p class="p1"><span class="s1">&lt;/script&gt;</span></p>
+<p class="p2"><span class="s1"></span><br></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;/body&gt;</span></p>
 <p class="p1"><span class="s1">&lt;/html&gt;</span></p>
 </body>
 </html>
