--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
-<!DOCTYPE html>
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <script src="script.js"></script>
   </head>
   <body>
-    <header>Rewrite your emails</header>
-    <div class="chat-bubble">
-      <textarea id="text-input"></textarea>
-      <button id="enter-button">Enter</button>
+    <div id="textbox">
+      <input type="text" id="input-text" placeholder="Type your text here">
+      <button id="enter-btn">Enter</button>
     </div>
     <div id="response"></div>
+   
+    <script src="script.js"></script>
   </body>
 </html>
