--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <div id="textbox">
-      <input type="text" id="input-text" placeholder="Type your text here">
+      <input type="text" id="input-text" placeholder="Type your email here">
       <button id="enter-btn">Enter</button>
     </div>
     <div id="response"></div>
