--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="lib/dotenv.min.js"></script>
   </head>
   <body>
     <div id="textbox">
